Programa_1/y.output
   0  $accept : programa $end

   1  programa : declaraciones funciones

   2  declaraciones : tipo lista_var PYC declaraciones
   3                | tipo_registro lista_var PYC declaraciones
   4                |

   5  tipo_registro : ESTRUCTURA INICIO declaraciones FIN

   6  tipo : base tipo_arreglo

   7  base : ENT
   8       | REAL
   9       | DREAL
  10       | CAR
  11       | SIN

  12  tipo_arreglo : A_PAR NUM C_PAR tipo_arreglo
  13               |

  14  lista_var : lista_var COMA ID
  15            | ID

  16  funciones : DEF tipo ID A_PAR argumentos C_PAR INICIO declaraciones sentencias FIN funciones
  17            |

  18  argumentos : lista_arg
  19             | SIN

  20  lista_arg : lista_arg COMA arg
  21            | arg

  22  arg : tipo_arg ID

  23  tipo_arg : base param_arr

  24  param_arr : A_PAR C_PAR param_arr
  25            |

  26  sentencias : sentencias sentencia
  27             | sentencia

  28  sentencia : SI e_bool ENTONCES sentencia FIN
  29            | SI e_bool ENTONCES sentencia SINO sentencia FIN
  30            | MIENTRAS e_bool HACER sentencia FIN
  31            | HACER sentencia MIENTRAS e_bool PYC
  32            | SEGUN A_PAR variable C_PAR HACER casos predeterminado FIN
  33            | variable ASIG expresion PYC
  34            | ESCRIBIR expresion PYC
  35            | LEER variable PYC
  36            | DEVOLVER PYC
  37            | DEVOLVER expresion PYC
  38            | TERMINAR PYC
  39            | INICIO sentencias FIN

  40  casos : CASO NUM D_PUNTOS sentencia casos
  41        | CASO NUM D_PUNTOS sentencia

  42  predeterminado : PRED D_PUNTOS sentencia
  43                 |

  44  e_bool : e_bool OR e_bool
  45         | e_bool AND e_bool
  46         | NOT e_bool
  47         | relacional
  48         | VERDADERO
  49         | FALSO

  50  relacional : relacional S_MAYOR relacional
  51             | relacional S_MENOR relacional
  52             | relacional S_MENORIG relacional
  53             | relacional S_MAYORIG relacional
  54             | relacional DIFERENTE relacional
  55             | relacional IGUAL relacional
  56             | expresion

  57  expresion : expresion MAS expresion
  58            | expresion MENOS expresion
  59            | expresion MUL expresion
  60            | expresion DIV expresion
  61            | expresion MODULO expresion
  62            | A_PAR expresion C_PAR
  63            | variable
  64            | NUM
  65            | CADENA
  66            | CARACTER

  67  variable : ID variable_comp

  68  variable_comp : dato_est_sim
  69                | arreglo
  70                | A_PAR parametros C_PAR

  71  dato_est_sim : dato_est_sim PUNTO ID
  72               |

  73  arreglo : A_CORCHETE expresion C_CORCHETE
  74          | arreglo A_CORCHETE expresion C_CORCHETE

  75  parametros : lista_param
  76             |

  77  lista_param : lista_param COMA expresion
  78              | expresion

state 0
	$accept : . programa $end  (0)
	declaraciones : .  (4)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	ESTRUCTURA  shift 6
	$end  reduce 4
	DEF  reduce 4

	programa  goto 7
	declaraciones  goto 8
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 1
	base : ENT .  (7)

	.  reduce 7


state 2
	base : REAL .  (8)

	.  reduce 8


state 3
	base : DREAL .  (9)

	.  reduce 9


state 4
	base : CAR .  (10)

	.  reduce 10


state 5
	base : SIN .  (11)

	.  reduce 11


state 6
	tipo_registro : ESTRUCTURA . INICIO declaraciones FIN  (5)

	INICIO  shift 12
	.  error


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : declaraciones . funciones  (1)
	funciones : .  (17)

	DEF  shift 13
	$end  reduce 17

	funciones  goto 14


state 9
	declaraciones : tipo . lista_var PYC declaraciones  (2)

	ID  shift 15
	.  error

	lista_var  goto 16


state 10
	declaraciones : tipo_registro . lista_var PYC declaraciones  (3)

	ID  shift 15
	.  error

	lista_var  goto 17


state 11
	tipo : base . tipo_arreglo  (6)
	tipo_arreglo : .  (13)

	A_PAR  shift 18
	ID  reduce 13

	tipo_arreglo  goto 19


state 12
	tipo_registro : ESTRUCTURA INICIO . declaraciones FIN  (5)
	declaraciones : .  (4)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	ESTRUCTURA  shift 6
	FIN  reduce 4

	declaraciones  goto 20
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 13
	funciones : DEF . tipo ID A_PAR argumentos C_PAR INICIO declaraciones sentencias FIN funciones  (16)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	.  error

	tipo  goto 21
	base  goto 11


state 14
	programa : declaraciones funciones .  (1)

	.  reduce 1


state 15
	lista_var : ID .  (15)

	.  reduce 15


state 16
	declaraciones : tipo lista_var . PYC declaraciones  (2)
	lista_var : lista_var . COMA ID  (14)

	COMA  shift 22
	PYC  shift 23
	.  error


state 17
	declaraciones : tipo_registro lista_var . PYC declaraciones  (3)
	lista_var : lista_var . COMA ID  (14)

	COMA  shift 22
	PYC  shift 24
	.  error


state 18
	tipo_arreglo : A_PAR . NUM C_PAR tipo_arreglo  (12)

	NUM  shift 25
	.  error


state 19
	tipo : base tipo_arreglo .  (6)

	.  reduce 6


state 20
	tipo_registro : ESTRUCTURA INICIO declaraciones . FIN  (5)

	FIN  shift 26
	.  error


state 21
	funciones : DEF tipo . ID A_PAR argumentos C_PAR INICIO declaraciones sentencias FIN funciones  (16)

	ID  shift 27
	.  error


state 22
	lista_var : lista_var COMA . ID  (14)

	ID  shift 28
	.  error


state 23
	declaraciones : tipo lista_var PYC . declaraciones  (2)
	declaraciones : .  (4)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	ESTRUCTURA  shift 6
	$end  reduce 4
	ID  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	LEER  reduce 4
	DEVOLVER  reduce 4
	TERMINAR  reduce 4

	declaraciones  goto 29
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 24
	declaraciones : tipo_registro lista_var PYC . declaraciones  (3)
	declaraciones : .  (4)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	ESTRUCTURA  shift 6
	$end  reduce 4
	ID  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	LEER  reduce 4
	DEVOLVER  reduce 4
	TERMINAR  reduce 4

	declaraciones  goto 30
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 25
	tipo_arreglo : A_PAR NUM . C_PAR tipo_arreglo  (12)

	C_PAR  shift 31
	.  error


state 26
	tipo_registro : ESTRUCTURA INICIO declaraciones FIN .  (5)

	.  reduce 5


state 27
	funciones : DEF tipo ID . A_PAR argumentos C_PAR INICIO declaraciones sentencias FIN funciones  (16)

	A_PAR  shift 32
	.  error


state 28
	lista_var : lista_var COMA ID .  (14)

	.  reduce 14


state 29
	declaraciones : tipo lista_var PYC declaraciones .  (2)

	.  reduce 2


state 30
	declaraciones : tipo_registro lista_var PYC declaraciones .  (3)

	.  reduce 3


state 31
	tipo_arreglo : A_PAR NUM C_PAR . tipo_arreglo  (12)
	tipo_arreglo : .  (13)

	A_PAR  shift 18
	ID  reduce 13

	tipo_arreglo  goto 33


state 32
	funciones : DEF tipo ID A_PAR . argumentos C_PAR INICIO declaraciones sentencias FIN funciones  (16)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 34
	.  error

	base  goto 35
	argumentos  goto 36
	lista_arg  goto 37
	arg  goto 38
	tipo_arg  goto 39


state 33
	tipo_arreglo : A_PAR NUM C_PAR tipo_arreglo .  (12)

	.  reduce 12


state 34
	base : SIN .  (11)
	argumentos : SIN .  (19)

	ID  reduce 11
	A_PAR  reduce 11
	C_PAR  reduce 19


state 35
	tipo_arg : base . param_arr  (23)
	param_arr : .  (25)

	A_PAR  shift 40
	ID  reduce 25

	param_arr  goto 41


state 36
	funciones : DEF tipo ID A_PAR argumentos . C_PAR INICIO declaraciones sentencias FIN funciones  (16)

	C_PAR  shift 42
	.  error


state 37
	argumentos : lista_arg .  (18)
	lista_arg : lista_arg . COMA arg  (20)

	COMA  shift 43
	C_PAR  reduce 18


state 38
	lista_arg : arg .  (21)

	.  reduce 21


state 39
	arg : tipo_arg . ID  (22)

	ID  shift 44
	.  error


state 40
	param_arr : A_PAR . C_PAR param_arr  (24)

	C_PAR  shift 45
	.  error


state 41
	tipo_arg : base param_arr .  (23)

	.  reduce 23


state 42
	funciones : DEF tipo ID A_PAR argumentos C_PAR . INICIO declaraciones sentencias FIN funciones  (16)

	INICIO  shift 46
	.  error


state 43
	lista_arg : lista_arg COMA . arg  (20)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	.  error

	base  goto 35
	arg  goto 47
	tipo_arg  goto 39


state 44
	arg : tipo_arg ID .  (22)

	.  reduce 22


state 45
	param_arr : A_PAR C_PAR . param_arr  (24)
	param_arr : .  (25)

	A_PAR  shift 40
	ID  reduce 25

	param_arr  goto 48


state 46
	funciones : DEF tipo ID A_PAR argumentos C_PAR INICIO . declaraciones sentencias FIN funciones  (16)
	declaraciones : .  (4)

	ENT  shift 1
	REAL  shift 2
	DREAL  shift 3
	CAR  shift 4
	SIN  shift 5
	ESTRUCTURA  shift 6
	ID  reduce 4
	INICIO  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	LEER  reduce 4
	DEVOLVER  reduce 4
	TERMINAR  reduce 4

	declaraciones  goto 49
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 47
	lista_arg : lista_arg COMA arg .  (20)

	.  reduce 20


state 48
	param_arr : A_PAR C_PAR param_arr .  (24)

	.  reduce 24


state 49
	funciones : DEF tipo ID A_PAR argumentos C_PAR INICIO declaraciones . sentencias FIN funciones  (16)

	ID  shift 50
	INICIO  shift 51
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencias  goto 60
	sentencia  goto 61
	variable  goto 62


state 50
	variable : ID . variable_comp  (67)
	dato_est_sim : .  (72)

	A_PAR  shift 63
	A_CORCHETE  shift 64
	COMA  reduce 72
	PYC  reduce 72
	ENTONCES  reduce 72
	HACER  reduce 72
	ASIG  reduce 72
	OR  reduce 72
	AND  reduce 72
	DIFERENTE  reduce 72
	IGUAL  reduce 72
	S_MAYOR  reduce 72
	S_MAYORIG  reduce 72
	S_MENOR  reduce 72
	S_MENORIG  reduce 72
	MAS  reduce 72
	MENOS  reduce 72
	MUL  reduce 72
	DIV  reduce 72
	MODULO  reduce 72
	C_PAR  reduce 72
	C_CORCHETE  reduce 72
	PUNTO  reduce 72

	variable_comp  goto 65
	dato_est_sim  goto 66
	arreglo  goto 67


state 51
	sentencia : INICIO . sentencias FIN  (39)

	ID  shift 50
	INICIO  shift 51
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencias  goto 68
	sentencia  goto 61
	variable  goto 62


state 52
	sentencia : SI . e_bool ENTONCES sentencia FIN  (28)
	sentencia : SI . e_bool ENTONCES sentencia SINO sentencia FIN  (29)

	VERDADERO  shift 69
	FALSO  shift 70
	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	NOT  shift 74
	A_PAR  shift 75
	.  error

	e_bool  goto 76
	variable  goto 77
	expresion  goto 78
	relacional  goto 79


state 53
	sentencia : MIENTRAS . e_bool HACER sentencia FIN  (30)

	VERDADERO  shift 69
	FALSO  shift 70
	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	NOT  shift 74
	A_PAR  shift 75
	.  error

	e_bool  goto 80
	variable  goto 77
	expresion  goto 78
	relacional  goto 79


state 54
	sentencia : HACER . sentencia MIENTRAS e_bool PYC  (31)

	ID  shift 50
	INICIO  shift 51
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencia  goto 81
	variable  goto 62


state 55
	sentencia : SEGUN . A_PAR variable C_PAR HACER casos predeterminado FIN  (32)

	A_PAR  shift 82
	.  error


state 56
	sentencia : ESCRIBIR . expresion PYC  (34)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 83


state 57
	sentencia : LEER . variable PYC  (35)

	ID  shift 50
	.  error

	variable  goto 84


state 58
	sentencia : DEVOLVER . PYC  (36)
	sentencia : DEVOLVER . expresion PYC  (37)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	PYC  shift 85
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 86


state 59
	sentencia : TERMINAR . PYC  (38)

	PYC  shift 87
	.  error


state 60
	funciones : DEF tipo ID A_PAR argumentos C_PAR INICIO declaraciones sentencias . FIN funciones  (16)
	sentencias : sentencias . sentencia  (26)

	ID  shift 50
	INICIO  shift 51
	FIN  shift 88
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencia  goto 89
	variable  goto 62


state 61
	sentencias : sentencia .  (27)

	.  reduce 27


state 62
	sentencia : variable . ASIG expresion PYC  (33)

	ASIG  shift 90
	.  error


state 63
	variable_comp : A_PAR . parametros C_PAR  (70)
	parametros : .  (76)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	C_PAR  reduce 76

	variable  goto 77
	expresion  goto 91
	parametros  goto 92
	lista_param  goto 93


state 64
	arreglo : A_CORCHETE . expresion C_CORCHETE  (73)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 94


state 65
	variable : ID variable_comp .  (67)

	.  reduce 67


state 66
	variable_comp : dato_est_sim .  (68)
	dato_est_sim : dato_est_sim . PUNTO ID  (71)

	PUNTO  shift 95
	COMA  reduce 68
	PYC  reduce 68
	ENTONCES  reduce 68
	HACER  reduce 68
	ASIG  reduce 68
	OR  reduce 68
	AND  reduce 68
	DIFERENTE  reduce 68
	IGUAL  reduce 68
	S_MAYOR  reduce 68
	S_MAYORIG  reduce 68
	S_MENOR  reduce 68
	S_MENORIG  reduce 68
	MAS  reduce 68
	MENOS  reduce 68
	MUL  reduce 68
	DIV  reduce 68
	MODULO  reduce 68
	C_PAR  reduce 68
	C_CORCHETE  reduce 68


state 67
	variable_comp : arreglo .  (69)
	arreglo : arreglo . A_CORCHETE expresion C_CORCHETE  (74)

	A_CORCHETE  shift 96
	COMA  reduce 69
	PYC  reduce 69
	ENTONCES  reduce 69
	HACER  reduce 69
	ASIG  reduce 69
	OR  reduce 69
	AND  reduce 69
	DIFERENTE  reduce 69
	IGUAL  reduce 69
	S_MAYOR  reduce 69
	S_MAYORIG  reduce 69
	S_MENOR  reduce 69
	S_MENORIG  reduce 69
	MAS  reduce 69
	MENOS  reduce 69
	MUL  reduce 69
	DIV  reduce 69
	MODULO  reduce 69
	C_PAR  reduce 69
	C_CORCHETE  reduce 69


state 68
	sentencias : sentencias . sentencia  (26)
	sentencia : INICIO sentencias . FIN  (39)

	ID  shift 50
	INICIO  shift 51
	FIN  shift 97
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencia  goto 89
	variable  goto 62


state 69
	e_bool : VERDADERO .  (48)

	.  reduce 48


state 70
	e_bool : FALSO .  (49)

	.  reduce 49


state 71
	expresion : CARACTER .  (66)

	.  reduce 66


state 72
	expresion : CADENA .  (65)

	.  reduce 65


state 73
	expresion : NUM .  (64)

	.  reduce 64


state 74
	e_bool : NOT . e_bool  (46)

	VERDADERO  shift 69
	FALSO  shift 70
	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	NOT  shift 74
	A_PAR  shift 75
	.  error

	e_bool  goto 98
	variable  goto 77
	expresion  goto 78
	relacional  goto 79


state 75
	expresion : A_PAR . expresion C_PAR  (62)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 99


state 76
	sentencia : SI e_bool . ENTONCES sentencia FIN  (28)
	sentencia : SI e_bool . ENTONCES sentencia SINO sentencia FIN  (29)
	e_bool : e_bool . OR e_bool  (44)
	e_bool : e_bool . AND e_bool  (45)

	ENTONCES  shift 100
	OR  shift 101
	AND  shift 102
	.  error


state 77
	expresion : variable .  (63)

	.  reduce 63


state 78
	relacional : expresion .  (56)
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)

	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	PYC  reduce 56
	ENTONCES  reduce 56
	HACER  reduce 56
	OR  reduce 56
	AND  reduce 56
	DIFERENTE  reduce 56
	IGUAL  reduce 56
	S_MAYOR  reduce 56
	S_MAYORIG  reduce 56
	S_MENOR  reduce 56
	S_MENORIG  reduce 56


state 79
	e_bool : relacional .  (47)
	relacional : relacional . S_MAYOR relacional  (50)
	relacional : relacional . S_MENOR relacional  (51)
	relacional : relacional . S_MENORIG relacional  (52)
	relacional : relacional . S_MAYORIG relacional  (53)
	relacional : relacional . DIFERENTE relacional  (54)
	relacional : relacional . IGUAL relacional  (55)

	DIFERENTE  shift 108
	IGUAL  shift 109
	S_MAYOR  shift 110
	S_MAYORIG  shift 111
	S_MENOR  shift 112
	S_MENORIG  shift 113
	PYC  reduce 47
	ENTONCES  reduce 47
	HACER  reduce 47
	OR  reduce 47
	AND  reduce 47


state 80
	sentencia : MIENTRAS e_bool . HACER sentencia FIN  (30)
	e_bool : e_bool . OR e_bool  (44)
	e_bool : e_bool . AND e_bool  (45)

	HACER  shift 114
	OR  shift 101
	AND  shift 102
	.  error


state 81
	sentencia : HACER sentencia . MIENTRAS e_bool PYC  (31)

	MIENTRAS  shift 115
	.  error


state 82
	sentencia : SEGUN A_PAR . variable C_PAR HACER casos predeterminado FIN  (32)

	ID  shift 50
	.  error

	variable  goto 116


state 83
	sentencia : ESCRIBIR expresion . PYC  (34)
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)

	PYC  shift 117
	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	.  error


state 84
	sentencia : LEER variable . PYC  (35)

	PYC  shift 118
	.  error


state 85
	sentencia : DEVOLVER PYC .  (36)

	.  reduce 36


state 86
	sentencia : DEVOLVER expresion . PYC  (37)
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)

	PYC  shift 119
	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	.  error


state 87
	sentencia : TERMINAR PYC .  (38)

	.  reduce 38


state 88
	funciones : DEF tipo ID A_PAR argumentos C_PAR INICIO declaraciones sentencias FIN . funciones  (16)
	funciones : .  (17)

	DEF  shift 13
	$end  reduce 17

	funciones  goto 120


state 89
	sentencias : sentencias sentencia .  (26)

	.  reduce 26


state 90
	sentencia : variable ASIG . expresion PYC  (33)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 121


state 91
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)
	lista_param : expresion .  (78)

	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	COMA  reduce 78
	C_PAR  reduce 78


state 92
	variable_comp : A_PAR parametros . C_PAR  (70)

	C_PAR  shift 122
	.  error


state 93
	parametros : lista_param .  (75)
	lista_param : lista_param . COMA expresion  (77)

	COMA  shift 123
	C_PAR  reduce 75


state 94
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)
	arreglo : A_CORCHETE expresion . C_CORCHETE  (73)

	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	C_CORCHETE  shift 124
	.  error


state 95
	dato_est_sim : dato_est_sim PUNTO . ID  (71)

	ID  shift 125
	.  error


state 96
	arreglo : arreglo A_CORCHETE . expresion C_CORCHETE  (74)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 126


state 97
	sentencia : INICIO sentencias FIN .  (39)

	.  reduce 39


state 98
	e_bool : e_bool . OR e_bool  (44)
	e_bool : e_bool . AND e_bool  (45)
	e_bool : NOT e_bool .  (46)

	.  reduce 46


state 99
	expresion : expresion . MAS expresion  (57)
	expresion : expresion . MENOS expresion  (58)
	expresion : expresion . MUL expresion  (59)
	expresion : expresion . DIV expresion  (60)
	expresion : expresion . MODULO expresion  (61)
	expresion : A_PAR expresion . C_PAR  (62)

	MAS  shift 103
	MENOS  shift 104
	MUL  shift 105
	DIV  shift 106
	MODULO  shift 107
	C_PAR  shift 127
	.  error


state 100
	sentencia : SI e_bool ENTONCES . sentencia FIN  (28)
	sentencia : SI e_bool ENTONCES . sentencia SINO sentencia FIN  (29)

	ID  shift 50
	INICIO  shift 51
	SI  shift 52
	MIENTRAS  shift 53
	HACER  shift 54
	SEGUN  shift 55
	ESCRIBIR  shift 56
	LEER  shift 57
	DEVOLVER  shift 58
	TERMINAR  shift 59
	.  error

	sentencia  goto 128
	variable  goto 62


state 101
	e_bool : e_bool OR . e_bool  (44)

	VERDADERO  shift 69
	FALSO  shift 70
	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	NOT  shift 74
	A_PAR  shift 75
	.  error

	e_bool  goto 129
	variable  goto 77
	expresion  goto 78
	relacional  goto 79


state 102
	e_bool : e_bool AND . e_bool  (45)

	VERDADERO  shift 69
	FALSO  shift 70
	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	NOT  shift 74
	A_PAR  shift 75
	.  error

	e_bool  goto 130
	variable  goto 77
	expresion  goto 78
	relacional  goto 79


state 103
	expresion : expresion MAS . expresion  (57)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 131


state 104
	expresion : expresion MENOS . expresion  (58)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 132


state 105
	expresion : expresion MUL . expresion  (59)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 133


state 106
	expresion : expresion DIV . expresion  (60)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 134


state 107
	expresion : expresion MODULO . expresion  (61)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 135


state 108
	relacional : relacional DIFERENTE . relacional  (54)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 78
	relacional  goto 136


state 109
	relacional : relacional IGUAL . relacional  (55)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 78
	relacional  goto 137


state 110
	relacional : relacional S_MAYOR . relacional  (50)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 78
	relacional  goto 138


state 111
	relacional : relacional S_MAYORIG . relacional  (53)

	ID  shift 50
	CARACTER  shift 71
	CADENA  shift 72
	NUM  shift 73
	A_PAR  shift 75
	.  error

	variable  goto 77
	expresion  goto 78
	relacional  goto 139

